--- a/UI Login/index.html
+++ b/UI Login/index.html
@@ -7,16 +7,16 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="containter">
+        <div class="container">
             <form action="" class="form">
-                <h5>Sign In</h5>
+                <h2>Sign In</h2>
                 <input type="email" name="email" class="box" placeholder="Enter email">
                 <input type="password" name="password" class="box"
                 placeholder="Enter Password">
                 <input type="submit" value="SIGN IN" id="submit">
                 <a href="#">Forget Password?</a>
             </form>
-            <div class="side"
+            <div class="side">
             <img src="The world studios.png" alt="">
             </div>
         </div>
